# McSplit-LL

./: .gitignore  CMakeLists.txt  Makefile  active-directed.sh  active-remaining.sh  active-run.sh  cmd.sh  filter_data.py  mapping.txt  mcsplit+LL.cpp  run-mcsp-ll.sh  run1.sh  run2.sh  run3.sh
configs/: run.env
indicators/: LV_diff_data.txt  LV_min_max_10.txt  biochemicalReactions_data.txt  biochemicalReactions_diff_data.txt  biochemicalReactions_min_max_10.txt  completedLV_data.txt  images-CVIU11_data.txt  images-CVIU11_diff_data.txt  images-CVIU11_min_max_10.txt  images-PR15_diff_data.txt  largerLV_diff_data.txt  largerLV_min_max_10.txt  meshes-CVIU11_data.txt  meshes-CVIU11_diff_data.txt  meshes-CVIU11_min_max_10.txt  phase_data.txt  scalefree_data.txt  scalefree_diff_data.txt  si_data.txt  si_data_test.txt
indicators/arxiv/: LV_data.txt  images-CVIU11_data.txt  largerLV_data.txt
indicators/without-loops/: LV_data.txt  images-CVIU11_data.txt  images-PR15_data.txt  largerLV_data.txt  scalefree_data.txt  (+1 more)
results/: README.md  biochemicalReactions_min_max_1.txt  biochemicalReactions_min_max_100.txt  biochemicalReactions_min_max_1800.txt  biochemicalReactions_min_max_500.txt  images-PR15_data.txt  images-PR15_min_max_10.txt  largerLV_min_max_1.txt  largerLV_min_max_100.txt  largerLV_min_max_1800.txt  largerLV_min_max_200.txt  largerLV_min_max_500.txt  meshes-CVIU11_min_max_100.txt  scalefree_min_max_10.txt  scalefree_min_max_100.txt  scalefree_min_max_1800.txt  si_min_max_1.txt  si_min_max_10.txt  si_min_max_100.txt  si_min_max_1800.txt  si_min_max_1_1.txt  si_min_max_20.txt  si_min_max_500.txt
(+14 files in other folders)
